--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cbcaio/boletos-laravel",
-    "description": "Gere boletos para impress„o de maneira f·cil e organizada",
+    "description": "Gere boletos para impress√£o de maneira f√°cil e organizada",
     "keywords": [
         "cbcaio","caixa economica","geracao boletos","bancos","laravel","boletos"
     ],
@@ -14,14 +14,11 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5",
-        "illuminate/database": "~5",
-        "graham-campbell/flysystem": "~3.3",
-        "intervention/image": "~2.3"
+        "illuminate/support": "~5.1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "orchestra/testbench": "~3.1"
+        "orchestra/testbench": "~3.1.0"
     },
     "autoload": {
         "psr-4": {
