--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "~5.5.9",
+        "php": ">=5.5.9",
         "illuminate/support": "~5.1.0"
     },
     "require-dev": {
